# gestao-clientes

./: .gitignore  README.md  models_temp.py  models_temp2.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: django.yml
clientes/: actions.py  admin.py  forms.py  models.py  urls.py  views.py
clientes/migrations/: 0001_initial.py  0002_venda_nfe_emitida.py  0003_auto_20210107_0724.py  0004_auto_20210107_0751.py  0005_auto_20210214_0405.py  0006_tabelaexistente.py  0007_auto_20210316_0243.py
clientes/templates/: footer.html  home.html  index.html  person.html  person_delete_confirm.html  person_form.html  pessoa.html
clientes/templates/clientes/: person_confirm_delete.html  (+4 more)
clientes/templatetags/: my_tags.py
gestao_clientes/: settings.py  urls.py
home/: urls.py  views.py
home/templates/: home.html  home2.html  home3.html
mymiddlewares/: MetaData.py
produtos/: admin.py  models.py  urls.py  views.py
produtos/migrations/: 0001_initial.py
produtos/templates/: produto.html
statics/: style.css
templates/: 404.html  500.html  base.html  polices.html  terms-of-use.html
templates/admin/: index.html
templates/registration/: login.html  password_change_form.html
vendas/: actions.py  admin.py  forms.py  managers.py  models.py  urls.py  views.py
vendas/migrations/: 0001_initial.py  0002_auto_20210107_0803.py  0003_auto_20210119_1647.py  0004_auto_20210205_0624.py  0005_auto_20210214_0348.py  0006_auto_20210316_0243.py  0007_auto_20210316_0245.py  0008_venda_status.py
vendas/tests/: test_vendas.py
(+11 files in other folders)
